Fix buttons styling on mobile devices on account page

--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -69,18 +69,6 @@
     }
   }
 
-  .action-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin: 1.5em 1em;
-
-    div {
-      button {
-        margin-left: 1em;
-      }
-    }
-  }
-
   .white-button {
     color: $dark-grey;
     border: 1px solid $dark-grey;
